force-app/main/default/objects/Quote_TandC__mdt/Quote_TandC__mdt.object-meta.xml
<CustomObject>
    <label>Quote T&amp;C</label>
    <pluralLabel>Quotes T&amp;C</pluralLabel>
</CustomObject>