force-app/main/default/objects/Quote_TandC__mdt/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>