force-app/main/default/objects/Quote_TandC__mdt/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>