force-app/main/default/objects/Quote_TandC__mdt/fields/Subscription_Management__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Management__c</fullName>
    <label>Subscription Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>