force-app/main/default/objects/Quote_TandC__mdt/fields/Terms_Text__c.field-meta.xml
<CustomField>
    <fullName>Terms_Text__c</fullName>
    <label>Terms Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>